# crowds

./: .env.example  .gitignore  CLAUDE.md  CUSTOM_AGENT_WEB_RESEARCH_IMPLEMENTATION.md  EDUCATION_PERSONAS_HANDOFF.md  IMPLEMENTATION_COMPLETE.md  README.md  ROADMAP.md  docker-compose.yml  fub.py  generate_sim_pdf.py  package-lock.json  package.json  setup_cape_flats_sim.py  test_implementation.sh  test_implementation_simple.sh
backend/: .dockerignore  Dockerfile  pyproject.toml  railway.json  requirements.txt  run.py
backend/app/: __init__.py  auth.py  billing.py  config.py
backend/app/api/: __init__.py  analysis.py  billing.py  config.py  graph.py  panel.py  report.py  research.py  simulation.py
backend/app/data/: sa_world_facts.json
backend/app/models/: project.py
backend/app/services/: __init__.py  agent_enricher.py  agent_profile_generator.py  agentsociety_opinion_block.py  agentsociety_output_writer.py  convergence_detector.py  custom_agent_parser.py  deep_research_service.py  document_context_engine.py  entity_reader.py  event_rule_engine.py  firecrawl_service.py  graph_builder.py  graph_memory_updater.py  graph_tools.py  income_seeder.py  interview_service.py  jina_service.py  judge_service.py  mode_detector.py  mode_specs.py  oasis_profile_generator.py  ollama_embedding.py  ontology_generator.py  opinion_agent.py  opinion_block.py  panel_service.py  persona_cache.py  persona_library.py  persona_retrieval.py  position_clustering.py  (+12 more)
backend/data/: sa_grant_amounts.json
backend/scripts/: archetype_mapper.py  attitude_donor_adapter.py  attitude_fuser.py  build_library.py  dedupe_library_names.py  ghs_adapter.py  persona_sampler.py  preview_b2b_persona.py  promote_fact.py  run_simulation_as.py  sa_names.py  test_profile_format.py  texture_generator.py  validate_archetype_mapper.py  validate_attitude_fuser.py  validate_ghs_adapter.py  validate_panel_service.py  validate_persona_retrieval.py  validate_persona_sampler.py  validate_texture_generator.py
backend/tests/: test_library_cast.py  test_mode_detector.py
(+73 files in other folders)
