[project]
name = "fub-sandbox-backend"
version = "0.2.0"
description = "Fub Sandbox - Offline-first fork running on Neo4j + Ollama"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Fub Simulation Team" }
]

dependencies = [
    # 核心框架
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    # LLM 相关
    "openai>=1.0.0",
    # Neo4j graph database driver
    "neo4j>=5.15.0",
    # AgentSociety 2 — Agent + Block + Memory framework (Tsinghua FIB Lab)
    "agentsociety2>=2.0.0",
    # 文件处理
    "PyMuPDF>=1.24.0",
    # 编码检测（支持非UTF-8编码的文本文件）
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    # 工具库
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "ladybug>=0.16.0",
    "firecrawl-py>=0.0.8",
    "aiohttp>=3.9.0",
    # Supabase auth — verify access-token JWTs on the backend
    "pyjwt[crypto]>=2.8.0",
    # torch/torchvision come in transitively via agentsociety2. Declared here so
    # we can pin them to the CPU-only index below — the GPU/CUDA wheels add ~5GB
    # and blow past hosted (Railway) build limits. We use remote LLM/embeddings,
    # so CPU torch is all that's needed.
    "torch==2.9.1",
    "torchvision==0.24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Pin torch/torchvision to CPU-only wheels (drops the multi-GB NVIDIA CUDA
# stack). Required for hosted builds without a GPU (e.g. Railway). Versions are
# pinned to releases that have Linux x86_64 CPU wheels (the Railway target).
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
